# moon-robot-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 1aa54a9deae0_initial_migration_with_robot_state_.py  59ae276bf76e_update_default_direction_value_for_.py
docker/: Dockerfile  docker-compose.yml
docs/: project_requirements.md
src/: main.py  settings.py
src/api/v1/: router.py
src/api/v1/endpoints/: commands.py  status.py
src/models/: __init__.py  command_history.py  database.py  obstacle.py  robot.py  robot_state.py
src/services/: command_processor.py  database.py  init_db.py  robot_service.py
tests/: conftest.py  factories.py  test_edge_cases.py  test_factories.py
tests/api/v1/endpoints/: test_commands.py  test_status.py
tests/models/: test_database_models.py  test_robot.py
tests/services/: test_command_processor.py
